<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">EOSDK</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="eo_MyCard_key">35724698d433d5e23077eb03fc66890e</string>
    <string name="eo_account_name">Account</string>
    <string name="eo_appflyer_key">dZCdrjF7JSVR89zL4oym2n</string>
    <string name="eo_bind">Account linking</string>
    <string name="eo_cs_tip_text">Feel free to contact us if you have questions</string>
    <string name="eo_currency_code_Hongkong">HKD</string>
    <string name="eo_currency_code_Malaysia">MYR</string>
    <string name="eo_currency_code_Singapore">SGD</string>
    <string name="eo_currency_code_Taiwan">TWD</string>
    <string name="eo_customer_service">Customer Service Centre</string>
    <string name="eo_customer_service_text">Customer service email</string>
    <string name="eo_email_error">"The account doesn't exist"</string>
    <string name="eo_email_hint">Enter an email address</string>
    <string name="eo_error_json">Data error</string>
    <string name="eo_error_login_password_empty">Create a password</string>
    <string name="eo_error_login_password_error">Password incorrect</string>
    <string name="eo_error_login_username_invalid">"The account doesn't exist"</string>
    <string name="eo_error_net_certificate_expired">Access error</string>
    <string name="eo_error_net_exception">Network error</string>
    <string name="eo_error_net_timeout">The request timed out</string>
    <string name="eo_error_regist_pwd_no_some">Confirm password is wrong</string>
    <string name="eo_error_sys_exception">System error</string>
    <string name="eo_error_unkonw_exception">Unknow error</string>
    <string name="eo_fb_share_url">http://www.eohfun.com/download.html</string>
    <string name="eo_forget_password">FORGET PASSWORD</string>
    <string name="eo_layout_tip_cancel">Cancel</string>
    <string name="eo_layout_tip_conitune">Continue</string>
    <string name="eo_layout_tip_goto">Goto</string>
    <string name="eo_layout_tip_goto_setting">Go to</string>
    <string name="eo_layout_tip_open_wifi">Open WIFI</string>
    <string name="eo_layout_tip_title">Loading</string>
    <string name="eo_loading">Loading</string>
    <string name="eo_login">Login</string>
    <string name="eo_login_loading_tip">Nice reminder</string>
    <string name="eo_no_install_email">Please install a mail app so to receive our emails.</string>
    <string name="eo_othre_login">Login with other account</string>
    <string name="eo_payChannel">Other</string>
    <string name="eo_payChannel_code_Codapay">8</string>
    <string name="eo_payChannel_code_Google">7</string>
    <string name="eo_payChannel_code_MyCard">4</string>
    <string name="eo_payChannel_code_Razer_Pin">5</string>
    <string name="eo_payChannel_code_Razer_Wallet">6</string>
    <string name="eo_payChannel_code_Xsolla">9</string>
    <string name="eo_payChannel_name_Codapay">Codapay</string>
    <string name="eo_payChannel_name_Google">Google</string>
    <string name="eo_payChannel_name_MyCard">MyCard</string>
    <string name="eo_payChannel_name_Razer_Pin">Razer Pin</string>
    <string name="eo_payChannel_name_Razer_Wallet">Razer Wallet</string>
    <string name="eo_payChannel_name_Xsolla">Xsolla</string>
    <string name="eo_pay_google_init_fail">Please confirm payment on google play is supported on your phone</string>
    <string name="eo_pay_google_no_init">Enable google play service failed</string>
    <string name="eo_pay_google_re_pay">Order is not completed, processing now</string>
    <string name="eo_pay_method">Select payment method</string>
    <string name="eo_pay_tip_inpayinging">Paying</string>
    <string name="eo_pay_tip_no_web_pay">Web page payment method is not enabled</string>
    <string name="eo_pwd_error">Invalid password, Must be 6-20 characters including letters and numbers</string>
    <string name="eo_pwd_hint">Password</string>
    <string name="eo_re_pwd_text">Confirm your password</string>
    <string name="eo_reset_email_success">A password reset email is sent to your email address, please create a new password in it.</string>
    <string name="eo_role_name">Character name</string>
    <string name="eo_send_email">Reset password</string>
    <string name="eo_sign_up">Sign up</string>
    <string name="eo_switch">Swich account</string>
    <string name="eo_tip">Tip</string>
    <string name="eo_tips_guest_text">To safeguard the progress in the game, please link this account to your phone or email</string>
    <string name="eo_tips_permission_cancel">No</string>
    <string name="eo_tips_permission_confirm">Yes</string>
    <string name="eo_tips_permission_content">In-game floating icon needs permission on your device</string>
    <string name="eo_tips_permission_title">Permission request</string>
    <string name="eo_user_denied_permission">Initialization failed, permission denied</string>
    <string name="facebook_app_id">568176173959889</string>
    <string name="fb_login_protocol_scheme">fb568176173959889</string>
    <string name="is_debug">true</string>
    <string name="kochava_app_guid">komdwsw-o76</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <item type="string" name="APKTOOL_DUMMY_2b">false</item>
</resources>
